# phishing-brand-classifier

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
notebooks/: 01_data_exploration.py  01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb
scripts/: benchmark_autogluon.py  download_data.py  evaluate.py  train.py
src/: __init__.py  interpretability.py  predict.py  train.py
src/api/: __init__.py  app.py
src/data/: __init__.py  dataset.py  transforms.py  utils.py
src/models/: __init__.py  classifier.py  losses.py
src/phishing_brand_classifier/: config.py
src/phishing_brand_classifier/evaluation/: __init__.py  plotting.py
src/phishing_brand_classifier/models/: __init__.py  brand_classifier.py  class_imbalance_losses.py
src/phishing_brand_classifier/preprocessing/: __init__.py  phishing_dataset.py
src/phishing_brand_classifier/visualization/: gradcam.py
src/phishing_classifier/: __init__.py  config.py
src/phishing_classifier/api/: app.py
src/phishing_classifier/evaluation/: __init__.py  metrics.py
src/phishing_classifier/models/: __init__.py  classifier.py  losses.py
src/phishing_classifier/preprocessing/: __init__.py  dataset.py  transforms.py
src/utils/: __init__.py  metrics.py  visualization.py
tests/: __init__.py  test_model.py  test_models.py
