[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-brand-classifier"
version = "1.0.0"
description = "Deep learning system for detecting phishing websites through brand classification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vytautas Bunevicius", email = "vytautas.bunevicius@example.com"}
]
keywords = ["phishing", "detection", "deep-learning", "computer-vision", "cybersecurity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "captum>=0.6.0",
    "tqdm>=4.65.0",
    "albumentations>=1.3.0",
    "pyyaml>=6.0.0",
    "opencv-python>=4.8.0",
    "grad-cam>=1.4.0",
    "tensorboard>=2.14.0",
    "ruff>=0.14.8",
    "autogluon>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.urls]
Homepage = "https://github.com/vytautas-bunevicius/phishing-brand-classifier"
Documentation = "https://github.com/vytautas-bunevicius/phishing-brand-classifier#readme"
Repository = "https://github.com/vytautas-bunevicius/phishing-brand-classifier"

[project.scripts]
phishing-train = "src.train:main"
phishing-predict = "src.predict:main"
phishing-api = "src.api.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | data
    | outputs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "ty>=0.0.1a32",
]
