[project]
name = "phishing-brand-classifier"
version = "1.0.0"
description = "Deep learning system for detecting phishing websites through brand classification"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Vytautas Bunevicius", email = "vytautas@bunevicius.com"}
]
keywords = ["phishing", "detection", "deep-learning", "computer-vision", "cybersecurity"]
dependencies = [
    "torch==2.0.0",
    "torchvision==0.15.0",
    "timm==0.9.0",
    "numpy==1.24.0",
    "pandas==2.0.0",
    "pillow==10.0.0",
    "scikit-learn==1.3.0",
    "matplotlib==3.7.0",
    "seaborn==0.12.0",
    "fastapi==0.100.0",
    "uvicorn==0.23.0",
    "python-multipart==0.0.6",
    "pydantic==2.0.0",
    "captum==0.6.0",
    "tqdm==4.65.0",
    "albumentations==1.3.0",
    "pyyaml==6.0.0",
    "opencv-python==4.8.0",
    "grad-cam==1.4.0",
    "tensorboard==2.14.0",
    "ruff==0.14.8",
    "autogluon==1.4.0",
]

[project.scripts]
phishing-train = "src.train:main"
phishing-predict = "src.predict:main"
phishing-api = "src.api.app:main"

[project.urls]
Homepage = "https://github.com/vytautas-bunevicius/phishing-brand-classifier"
Documentation = "https://github.com/vytautas-bunevicius/phishing-brand-classifier#readme"
Repository = "https://github.com/vytautas-bunevicius/phishing-brand-classifier"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "PL",
    "RUF",
    "TID",
    "D",
]
ignore = [
    "E501",
    "D203",
    "D213",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["phishing_classifier"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true
